[project]
name = "apifast"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "sse-starlette>=2.1.0,<2.2.0",
    "uvloop>=0.18.0",
    "httptools>=0.5.0",
    "jsonschema-rs>=0.20.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "anyio>=4.7.0",
    "grpcio>=1.73.1",
    "pydantic>=2.11.7",
    "fastapi>=0.120.0",
    "pydantic-settings>=2.11.0",
    "langgraph-sdk>=0.2.9",
    "aiohttp>=3.13.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
    "pytest-asyncio>=1.2.0"
]

[tool.uv]
# всегда подтягивать dev-зависимости
default-groups = ["dev"]

[tool.ruff]
line-length = 88

lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # первая строка docstring — повелительное наклонение
    "T201", # принты
    "UP",   # pyupgrade
]

lint.ignore = [
    "UP006",
    "UP007",
    "UP035", # разрешено import из typing_extensions
    "D417",  # не требуем полных docstring для всех аргументов
    "E501",  # не проверяем длину строки
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"